@@ -5,7 +5,7 @@ organization := "org.ergoplatform"
 
 name := "ergo"
 
-version := "0.1.0"
+version := "0.2.1"
 
 scalaVersion := "2.12.3"
 
@@ -14,28 +14,58 @@ resolvers ++= Seq("Sonatype Releases" at "https://oss.sonatype.org/content/repos
   "Typesafe maven releases" at "http://repo.typesafe.com/typesafe/maven-releases/",
   "Sonatype Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/")
 
-val scorexVersion = "2.0.0-RC3-128-gc4f7df3-SNAPSHOT"
+val scorexVersion = "04b0b5be-SNAPSHOT"
 
 libraryDependencies ++= Seq(
   "org.scorexfoundation" %% "iodb" % "0.3.2",
-  "org.scorexfoundation" %% "scorex-core" % scorexVersion,
+  ("org.scorexfoundation" %% "scorex-core" % scorexVersion).exclude("ch.qos.logback", "logback-classic"),
+  "ch.qos.logback" % "logback-classic" % "1.2.3",
   "org.scorexfoundation" %% "avl-iodb" % "0.2.11",
-  "com.storm-enroute" %% "scalameter" % "0.8.+",
   "com.iheart" %% "ficus" % "1.4.+",
 
+  "com.storm-enroute" %% "scalameter" % "0.8.+" % "test",
   "org.scalactic" %% "scalactic" % "3.0.+" % "test",
-  "org.scalatest" %% "scalatest" % "3.0.+" % "test",
+  "org.scalatest" %% "scalatest" % "3.0.+" % "test,it",
   "org.scalacheck" %% "scalacheck" % "1.13.+" % "test",
   "org.scorexfoundation" %% "scorex-testkit" % scorexVersion % "test",
   "com.typesafe.akka" %% "akka-testkit" % "2.4.+" % "test",
-  "com.typesafe.akka" %% "akka-http-testkit" % "10.0.9" % "test"
+  "com.typesafe.akka" %% "akka-http-testkit" % "10.+" % "test",
+  "org.asynchttpclient" % "async-http-client" % "2.1.0-alpha22" % "it",
+  "com.spotify" % "docker-client" % "8.11.0" % "it" classifier "shaded",
+  "com.fasterxml.jackson.dataformat" % "jackson-dataformat-properties" % "2.9.2" % "it"
 )
 
 coverageExcludedPackages := ".*ErgoApp.*;.*routes.*;.*ErgoPersistentModifier"
 
 fork := true
 
-javaOptions in run ++= Seq("-Xmx2G")
+val opts = Seq(
+  "-server",
+  // JVM memory tuning for 2g ram
+  "-Xms128m",
+  "-Xmx2G",
+  //64M for stack, reduce after optimizations
+  "-Xss64m",
+  "-XX:+ExitOnOutOfMemoryError",
+  // Java 9 support
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=java.xml.bind",
+
+  // from https://groups.google.com/d/msg/akka-user/9s4Yl7aEz3E/zfxmdc0cGQAJ
+  "-XX:+UseG1GC",
+  "-XX:+UseNUMA",
+  "-XX:+AlwaysPreTouch",
+
+  // probably can't use these with jstack and others tools
+  "-XX:+PerfDisableSharedMem",
+  "-XX:+ParallelRefProcEnabled",
+  "-XX:+UseStringDeduplication")
+
+// todo after adding sbt-native-packager
+//javaOptions in Universal ++= opts.map(opt => "-J" + opt)
+
+// -J prefix is required by the bash script
+javaOptions in run ++= opts
 
 homepage := Some(url("http://ergoplatform.org/"))
 
@@ -55,6 +85,8 @@ sourceGenerators in Compile += Def.task {
        |""".stripMargin)
   Seq(versionFile)
 }
+
+mainClass in assembly := Some("org.ergoplatform.ErgoApp")
 
 test in assembly := {}
 
@@ -89,3 +121,15 @@ dockerfile in docker := {
 buildOptions in docker := BuildOptions(
   removeIntermediateContainers = BuildOptions.Remove.OnSuccess
 )
+
+
+//FindBugs settings
+
+findbugsReportType := Some(FindbugsReport.Xml)
+findbugsExcludeFilters := Some(scala.xml.XML.loadFile(baseDirectory.value / "findbugs-exclude.xml"))
+
+//Scapegoat settings
+
+scapegoatVersion in ThisBuild := "1.3.3"
+
+scapegoatDisabledInspections := Seq("FinalModifierOnCaseClass")
